fix: update bar gap size to ensure consistency across themes

--- a/src/components/slots/bar/figma-ui3.scss
+++ b/src/components/slots/bar/figma-ui3.scss
@@ -1,6 +1,6 @@
 :root[data-theme='figma-ui3'] {
   --bar-min-height: var(--size-large);
-  --bar-gap: var(--size-xxxsmall);
+  --bar-gap: var(--size-xxsmall);
   --bar-padding: 0 var(--size-xsmall);
   --bar-background-color: transparent;
   --bar-border: var(--size-unit) solid var(--figma-color-border);
