--- a/src/components/slots/bar/penpot.scss
+++ b/src/components/slots/bar/penpot.scss
@@ -1,6 +1,6 @@
 :root[data-theme='penpot'] {
   --bar-min-height: var(--size-large);
-  --bar-gap: var(--size-xxxsmall);
+  --bar-gap: var(--size-xxsmall);
   --bar-padding: 0 var(--size-xsmall);
   --bar-background-color: transparent;
   --bar-border: none;
